新增xxl-job旧版本自动注册任务